--- a/gb/22/11/9/n13862397.md
+++ b/gb/22/11/9/n13862397.md
@@ -42,31 +42,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036151.md#1">释迦牟尼修得正果为何仍遭受果报？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030745.md#1">【古道人生】为什么他知道儿子是来讨债的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034619.md#1">人一定能战胜天？“人定胜天”这么多年你都解释错了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/19/n14038018.md#1">【未解之谜】深度解密：S4基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043257.md#1">【新唐人快报】白纸2.0运动会师成都？当局维稳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042513.md#1">【菁英论坛】秦刚案凸显习近平困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043034.md#1">【远见快评】毛宁记者会尴尬 秦刚仕途未定论？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041779.md#1">【秦鹏观察】处理秦刚留后手 习难咽下一口气？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041818.md#1">太阳系边缘或隐藏着一颗巨大冰冻行星</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14041897.md#1">秦刚被免职 改王毅兼任外长 美国回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041825.md#1">刀郎新歌《罗刹海市》刷屏 歌词曲风令人惊艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041711.md#1">不服一审判刑13年 吴亦凡强奸案二审开庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041756.md#1">直呼父子年龄相差大 古巨基盼儿子早婚早育</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041417.md#1">巨石强森捐出史上最高捐款 美演员工会感激</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041340.md#1">孙艺真公开孩子手的照片 网友直呼“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040162.md#1">口疮让人苦不堪言？中医4招对付口腔溃疡、牙龈肿痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14040052.md#1">DNA受伤让人变老 易致癌 名医教你护DNA最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041456.md#1">最常见的11种梦靥 你经历过几种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041159.md#1">青壮年罹癌恐不自知 当心6种常见一级致癌物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030318.md#1">想节税吗？善用这些税收减免帮你省荷包</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062852.md#1">【百年真相】惊见毛用餐排场 戴煌直言惹大祸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/9/n13862397.htm">面对最致命的毒品危机 加州拟立法遏制芬太尼</a></p><hr>
