--- a/gb/23/3/4/n13942927.md
+++ b/gb/23/3/4/n13942927.md
@@ -29,31 +29,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11118849.md#1" target="_blank">严家伟：极权专制对中国新闻界的一次严厉打压</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940368.md#1">【未解之谜】ChatGPT技术 犹太传说中早就有了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942614.md#1">【秦鹏观察】李强主导放弃习近平清零政策？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942250.md#1">【晚间新闻】中共两会如临大敌 北京武警持枪戒备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/3/n13942364.md#1">【新唐人大视野】两会前 习一动作让官员心惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941826.md#1">河间市公安局长李宪被杀 中共两会前封锁消息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941116.md#1">石家庄一碗面卖2万 上海话梅1600元一斤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940906.md#1">美众院委员会一天通过14抗共法案 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940944.md#1">汤唯带女儿吃披萨 拍照一动作获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940263.md#1">孙俪晒女儿跳舞比赛照 邓超不识奖牌超搞笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941820.md#1">大陆演员李飞无戏可拍 回老家摆摊卖鱼近一年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940969.md#1">贾静雯外游手指肿胀剧痛 返台就医方知被误诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941302.md#1">魏德圣访搜救高手“跑山兽”家 重牵10年前缘分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934796.md#1">这一食物是良药 每天吃两个患癌风险降45%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938702.md#1">不打针不吃药 自然疗法治关节炎9要点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929714.md#1">当被别人瞧不起 你是反击？还是保持距离</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941071.md#1">人体缺铁 中医建议食补最好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941549.md#1">在人休息时，癌症醒来和扩散</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062852.md#1">【百年真相】惊见毛用餐排场 戴煌直言惹大祸</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/4/n13942927.htm">101号高速公路 南湾新收费车道正式开始收费</a></p><hr>
