--- a/gb/22/9/16/n13826535.md
+++ b/gb/22/9/16/n13826535.md
@@ -24,39 +24,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/5/n13796032.md#1">野火会使加州人患肺癌的风险更高吗?</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/26/n13810886.md#1">逾半肺癌患者初诊已癌末 医吁45岁应筛检</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13816407.md#1">天普健康推出创新计划 普及肺癌筛查与治疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935348.md#1">中兴国小附幼全客语教学 县长励孩童多听多说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935360.md#1">8旬老烟枪胸闷就医 x竟意外发现肺部肿瘤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935127.md#1">下肢水肿成因多 医揭八种常见原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934046.md#1">守护学童健康 竹市虎林学区设空气品质维护区</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063863.md#1">防癌一起来 GO-GO-GO不是口号而是行动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063221.md#1">苗栗客家艺文嘉年华-广场舞比赛 今日启动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063169.md#1">苗栗县长夫人捐赠防蚊物资 共同对抗登革热</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062699.md#1">新竹市国际风筝节9/2登场 6国顶尖好手秀特技</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/14/n2965989.md#1" target="_blank">鲜为人知的马克思之三：虚荣的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927255.md#1">【百年真相】部长级高官病亡 悼文捅出惊天黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926855.md#1">【救世古鉴】通过色欲门考验  他走过生死关得后福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929957.md#1">【未解之谜】来自星星的孩子（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934851.md#1">【十字路口】中共扮装和平鸽 普京愿意和谈？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934258.md#1">【传统音乐】2022 飞天艺术学院器乐大赛选播（第二辑）首播：美东时间2月25日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13932987.md#1">【报料传真】专访王瑞琴：对高官曾抱幻想（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934125.md#1">岳山：习或再削国务院权力 李强恐成最弱总理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934286.md#1">布林肯王毅会谈后 美中关系更加恶化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918890.md#1">制裁重创中共芯片业 专家：美中军力差距扩大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934353.md#1">46岁海清自曝患怪病 无药可治恐退出演艺圈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934335.md#1">北美巡演惹祸？ 脱口秀演员池子遭中宣部封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933589.md#1">写春联钦点“有缘人”周星驰在越南招募演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934599.md#1">夏如芝、张捷登记3年 西洋情人节浪漫完婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933929.md#1">六小龄童：86版《西游记》副导演任凤坡病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933339.md#1">肥猫变成波兰著名旅游景点 获5颗星评价</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932028.md#1">罐头果汁妙用多 教你12个好味吃法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924996.md#1">自制墨西哥卷饼3个小技巧 好吃又不漏馅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933926.md#1">打包行李带啥？ 专家分享航空旅游必备清单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934665.md#1">房地产经纪：拉斯维加斯涌进投资客</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063209.md#1">【全球新闻】中共大使被召见 日本访华被取消</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/16/n13826535.htm">低剂量电脑断层(LDCT)    早期侦测肺癌利器</a></p><hr>
